--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,10 +1,30 @@
 {
-  "short_name": "Java Interview Question Generator",
-  "name": "Java Interview Question Generator",
+  "short_name": "Warmup Generator",
+  "name": "Warmup Generator",
   "icons": [
     {
-      "src": "favicon.ico",
-      "sizes": "96x96 64x64 32x32 24x24 16x16",
+      "src": "favicon-16x16.png",
+      "sizes": "16x16",
+      "type": "image/x-icon"
+    },
+    {
+      "src": "favicon-32x32.png",
+      "sizes": "32x32",
+      "type": "image/x-icon"
+    },
+    {
+      "src": "android-chrome-192x192.png",
+      "sizes": "192x192",
+      "type": "image/x-icon"
+    },
+    {
+      "src": "android-chrome-512x512.png",
+      "sizes": "512x512",
+      "type": "image/x-icon"
+    },
+    {
+      "src": "apple-touch-icon.png",
+      "sizes": "180x180",
       "type": "image/x-icon"
     }
   ],
